Bug 1291543 - [1.1] Accept partial information from VBR headers. r=jya a=sylvestre